# sdhdf_tools

./: .gitignore  .readthedocs.yaml  README.md
c/sdhdfProc/: Dockerfile  README  README.md  bootstrap  configure.ac  makeit  sdhdfProc_ephemeris.c  sdhdfProc_metadata.c  sdhdf_autoFlag.c  sdhdf_describe.c  sdhdf_extract.c  sdhdf_flag.c  sdhdf_gainCurve.c  sdhdf_identify.c  sdhdf_modify.c  sdhdf_plotMultiSpec.c  sdhdf_plotSpectrum.c  sdhdf_pointing.c  sdhdf_primaryFluxCal.c  sdhdf_v1.8.h
c/sdhdfProc/runtime/: README
c/sdhdfProc/runtime/calibration/: README
c/sdhdfProc/runtime/earth/: eopc04_IAU2000.62-now
c/sdhdfProc/runtime/fileConversion/: sdHeader.fits
c/sdhdfProc/runtime/observatory/: observatories.list
c/sdhdfProc/runtime/observatory/parkes/calibration/UWL/: 2020-04-05-0100_2368_pcm.smint  uwl_190604_044008_b4.avfluxcal  uwl_200727_151722.cf.fluxcal  uwl_200816_143924.cf.fluxcal  uwl_200924_123330.cf.fluxcal  uwl_201217_061356.cf.fluxcal  uwl_210108_035315.cf.fluxcal  uwl_210131_042312.cf.fluxcal  uwl_210612_181037.cf.fluxcal  uwl_210625_200742.cf.fluxcal  uwl_210713_144931.cf.fluxcal  uwl_210803_095234.cf.fluxcal  uwl_211028_082548.cf.fluxcal  uwl_211203_092259.cf.fluxcal  uwl_211214_074911.cf.fluxcal  uwl_211227_072339.cf.fluxcal  uwl_220318_012923.cf.fluxcal  uwl_220328_233636.cf.fluxcal  uwl_220513_135440.cf.fluxcal  uwl_220517_150910.cf.fluxcal  uwl_220705_132107.cf.fluxcal  uwl_220901_152703.cf.fluxcal
c/sdhdfProc/runtime/observatory/parkes/rfi/: persistentRFI.dat~
c/sdhdfProc/runtime/spectralLines/: spectralLines.dat~
c/sdhdfProc/src/: Makefile.am  T2toolkit.h  attributes.c  fileManipulation.c  inspecta.h  inspecta_v1.9.h  inspecta_v4.0.h  metadata.c  sdhdfProc.h  sdhdfProc_calibration.c  sdhdfProc_ephemeris.c  sdhdfProc_fileManipulation.c  sdhdfProc_maths.c  sdhdfProc_metadata.c  sdhdf_applyCal.c  sdhdf_autoFlag.c  sdhdf_autoZap.c  sdhdf_cal.c  sdhdf_calProc.c  sdhdf_calibrate.c  sdhdf_calibrateOld.c  sdhdf_checkFile.c  sdhdf_convertFromFITS.c  sdhdf_convertFromPsr.c  sdhdf_convertFromSDFITS.c  sdhdf_convertPulsarSearchMode.c  sdhdf_convertTo.c  sdhdf_convertToPSRFITS.c  sdhdf_describe.c  sdhdf_extract.c  sdhdf_extractBand.c  sdhdf_extractDump.c  sdhdf_flag.c  sdhdf_fluxDensity.c  sdhdf_gainCurve.c  sdhdf_identify.c  sdhdf_join.c  sdhdf_joinBands.c  sdhdf_joinFiles.c  sdhdf_listLines.c  (+26 more)
containers/: Dockerfile
inspecta/: configure.ac
inspecta/config/: pgplot.m4  x11.m4
inspecta/runtime/fileConversion/: README
inspecta/runtime/observatory/parkes/: observatory.properties
inspecta/runtime/observatory/parkes/calibration/UWL/: automatic_selection_fluxcal.txt  uwl_200816_112151.cf.fluxcal  uwl_200816_143924.cf.fluxcal  uwl_200902_104558.cf.fluxcal  uwl_201008_111911.cf.fluxcal  uwl_210131_042312.fluxcal  uwl_210627_184502.cf.fluxcal  uwl_210911_142647.cf.fluxcal  uwl_220116_052645.cf.fluxcal  uwl_220308_013854.cf.fluxcal  uwl_220404_170224.cf.fluxcal  uwl_220423_153751.cf.fluxcal  uwl_220528_213444.cf.fluxcal  uwl_220617_141051.cf.fluxcal  uwl_220705_132107.fluxcal  uwl_220707_195925.cf.fluxcal  uwl_220723_165154.cf.fluxcal  uwl_220928_114054.cf.fluxcal  uwl_230829_143953.cf.smint
inspecta/runtime/observatory/parkes/historyLog/: topoFreqError.txt
inspecta/src/: T2toolkit.c  T2toolkit.h  TKnonlinearFit.h  sdhdfProc_calibration.c  sdhdfProc_ephemeris.c  sdhdfProc_fileManipulation.c  sdhdf_applyCal.c  sdhdf_autoFlag.c  sdhdf_calProc.c  sdhdf_calibrate.c  sdhdf_checkFile.c  sdhdf_convertFromFITS.c  sdhdf_convertFromPsr.c  sdhdf_convertPulsarSearchMode.c  sdhdf_convertTo.c  sdhdf_convertToPSRFITS.c  sdhdf_extractDump.c  sdhdf_flag.c  sdhdf_gainCurve.c  sdhdf_join.c  sdhdf_joinBands.c  sdhdf_listLines.c  sdhdf_model.c  sdhdf_plotMultiSpec.c  sdhdf_plotPulsar.c  sdhdf_plotScan.c  sdhdf_plotSpectrum.c  sdhdf_plotWide.c  sdhdf_primaryFluxCal.c  sdhdf_quicklook.c  sdhdf_rfiTime.c  sdhdf_statistics.c  sdhdf_sum.c  sdhdf_waterfall.c
python/: README.md  SDHDF_definition_1.7.csv  SDHDF_definition_1.8.csv  SDHDF_definition_1.9.csv  access_sdhdf_ex.py  dump_sdhdf.py  get_dataset_ex.py  plot_sdhdf.py  pyproject.toml  quick_list_sdhdf.py  read_hdf.py  read_pickle.py  read_sdhdf_header.py  show_sdhdf_definition.py  verify_sdhdf.py
python/docs/: conf.py  index.rst
python/examples/: access_sdhdf_ex.py  demo.ipynb  get_dataset_ex.py  plot_sdhdf.py  quick_list_sdhdf.py  read_sdhdf_header.py  show_sdhdf_definition.py  verify_sdhdf.py
python/notebooks/: access_sdhdf_ex.ipynb  plot_sdhdf.ipynb  quick_list_sdhdf.ipynb  read_sdhdf_header.ipynb  show_sdhdf_definition.ipynb
python/pyINSPECTA/: __init__.py  attributes.py  exceptions.py  flagging.py  history.py  logger.py  parkes_rfi.csv  sdhdf.py  tables.py  test.ipynb
python/pyINSPECTA/definitions/: sdhdf_def_v1.9.json  sdhdf_def_v2.0.json  sdhdf_def_v2.9.json  sdhdf_def_v3.0.json  sdhdf_def_v4.0.json
python/pySDHDF/: __init__.py  access_sdhdf_ex.py  demo.ipynb  flagging.py  history.py  scratch.ipynb  sdhdf.py  verify_sdhdf.py
python/pySDHDF/definitions/: sdhdf_def_v1.9.json  sdhdf_def_v2.3.json
python/src/: demo.ipynb  sdhdf.py
sh/: SDHDF_definition_1.8.csv  extract-sdhdf-subband.sh
