[tool.poetry]
name = "sdhdf-tools"
version = "0.1.0"
description = "A collection of tools for interrogating Single Dish Hierarchical Data Format (SDHDF) files"
authors = ["Lawrence Toomey, George Hobbs, Alec Thomson"]
readme = "README.md"
packages = [{include = "sdhdf_tools"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
