[tool.poetry]
name = "pyINSPECTA"
version = "0.1.0"
description = "A collection of tools for interrogating Single Dish Hierarchical Data Format (SDHDF) files"
authors = ["Lawrence Toomey, George Hobbs, Alec Thomson"]
readme = "README.md"
packages = [{include = "pyINSPECTA"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21"
astropy = "^5"
h5py = "^3.7"
pandas = "^1.4"
xarray = "^2022"
matplotlib = "^3.5"
pytables = "3.7"

[tool.poetry.dev-dependencies]
black = "^22"
isort = "^5.10"
sphinx = "^4.2"
sphinx_mdinclude = "^0.5"
sphinx_rtd_theme = "^1.1"
nbconvert = "^7.2"
sphinx-autoapi = "^2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
